force-app/main/default/objects/Calendar_Schedule_Config__mdt/Calendar_Schedule_Config__mdt.object-meta.xml
<CustomObject>
    <description>Used to auto schedule items</description>
    <label>Calendar Schedule Config</label>
    <pluralLabel>Calendar Schedule Configs</pluralLabel>
</CustomObject>