force-app/main/default/objects/Calendar_Schedule_Config__mdt/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <default>true</default>
                <label>High</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Foster - Weekly</fullName>
            </value>
            <value>
                <fullName>Foster - Every Other Week</fullName>
            </value>
            <value>
                <fullName>Foster - Every Three Weeks</fullName>
            </value>
            <value>
                <fullName>Foster - Monthly</fullName>
            </value>
            <value>
                <fullName>Foster - Every Other Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>