force-app/main/default/objects/Calendar_Schedule_Config__mdt/fields/Population__c.field-meta.xml
<CustomField>
    <fullName>Population__c</fullName>
    <label>Population</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRC</fullName>
                <default>true</default>
                <label>CRC</label>
            </value>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>Foster - All</fullName>
            </value>
            <value>
                <fullName>Board And Train All</fullName>
            </value>
            <value>
                <fullName>CARE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>