force-app/main/default/objects/Calendar_Schedule_Config__mdt/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treatment</fullName>
                <default>true</default>
                <label>Treatment</label>
            </value>
            <value>
                <fullName>Playgroup</fullName>
            </value>
            <value>
                <fullName>Foster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>